# ChowMultiTool

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: auto-format.yml  cmake.yml
installers/mac/: ChowMultiTool.pkgproj  Intro.txt  build_mac_installer.sh
installers/windows/: ChowMultiTool_Install_Script.iss  build_win_installer.sh
modules/: CMakeLists.txt
modules/LBFGSpp/: CMakeLists.txt
modules/LBFGSpp/include/: LBFGSB.h
modules/cmake/: CMakeRC.cmake
prototypes/: EQOptimiser.py
res/: CMakeLists.txt
res/presets/: Analog EQ Dull.chowpreset  Analog EQ Excite.chowpreset  Analog EQ Flat.chowpreset  Band Splitter 2-Way Split.chowpreset  Band Splitter 3-Way Split.chowpreset  Band Splitter 4-Way Split.chowpreset  EQ Flat.chowpreset  EQ Frowney.chowpreset  EQ Small Cleanup.chowpreset  EQ Smiley.chowpreset  Init.chowpreset  Pultec Flat.chowpreset  WS Folder.chowpreset  WS Hard Clip.chowpreset  WS Math Folder.chowpreset  WS Rectifier.chowpreset  WS Soft Saturate.chowpreset
scripts/: aax_builds.sh  clap-validate.sh  ios_build.sh  mac_builds.sh  pluginval.sh  validate.sh  win_builds.sh
src/: CMakeLists.txt  ChowMultiTool.cpp  ChowMultiTool.h  pch.h
src/dsp/: MultiToolProcessor.cpp  MultiToolProcessor.h
src/dsp/AnalogEQ/: AnalogEQProcessor.cpp  AnalogEQProcessor.h  PultecEQWDF.cpp  PultecEQWDF.h
src/dsp/BandSplitter/: BandSplitterProcessor.cpp  BandSplitterProcessor.h
src/dsp/Brickwall/: BrickwallProcessor.cpp  BrickwallProcessor.h
src/dsp/EQ/: EQOptimiser.cpp  EQOptimiser.h  EQProcessor.cpp  EQProcessor.h
src/dsp/PultecEQ/: PultecEQProcessor.cpp  PultecEQProcessor.h  PultecEQWDF.cpp  PultecEQWDF.h
src/dsp/SVF/: SVFProcessor.cpp  SVFProcessor.h
src/dsp/Shared/: EQHelpers.cpp  EQHelpers.h
src/dsp/SignalGenerator/: SignalGeneratorProcessor.cpp  SignalGeneratorProcessor.h
src/dsp/Waveshaper/: SignalSmithWaveshaper.cpp  SignalSmithWaveshaper.h  SplineHelpers.h  SplineWaveshaper.cpp  SplineWaveshaper.h  WaveshaperProcessor.cpp  WaveshaperProcessor.h
src/gui/: PluginEditor.cpp  PluginEditor.h
src/gui/AnalogEQ/: AnalogEQEditor.cpp  AnalogEQEditor.h  AnalogEQPlot.cpp  AnalogEQPlot.h  EQChyron.cpp  EQChyron.h
src/gui/BandSplitter/: BandSplitterChyron.cpp  BandSplitterChyron.h  BandSplitterColours.h  BandSplitterEditor.cpp  BandSplitterEditor.h  BandSplitterPlot.cpp  BandSplitterPlot.h  BandSplitterSlopePicker.h  SlopePicker.cpp  SlopePicker.h  TriStateButtonAttachment.cpp  TriStateButtonAttachment.h
src/gui/Brickwall/: BottomBar.cpp  BottomBar.h  BrickwallChyron.cpp  BrickwallChyron.h  BrickwallEditor.cpp  BrickwallEditor.h  BrickwallPlot.cpp  BrickwallPlot.h
src/gui/EQ/: BottomBar.cpp  BottomBar.h  EQBandBox.cpp  EQBandBox.h  EQChyron.cpp  EQChyron.h  EQDrawView.cpp  EQDrawView.h  EQEditor.cpp  EQEditor.h  EQGUIHelpers.h  EQPlot.cpp  EQPlot.h
src/gui/InitPage/: InitPage.cpp  InitPage.h
src/gui/PultecEQ/: PultecEditor.cpp  PultecEditor.h  PultecPlot.cpp  PultecPlot.h
src/gui/SVF/: BottomBar.cpp  BottomBar.h  SVFChyron.cpp  SVFChyron.h  SVFEditor.cpp  SVFEditor.h  SVFParamControls.cpp  SVFParamControls.h  SVFPlot.cpp  SVFPlot.h
src/gui/Shared/: ChoicePicker.h  Colours.h  DotSlider.cpp  DotSlider.h  ErrorMessageView.cpp  ErrorMessageView.h  Fonts.cpp  Fonts.h  FrequencyPlotHelpers.h  IconButton.h  LookAndFeels.cpp  LookAndFeels.h  SimpleBox.cpp  SimpleBox.h  SpectrumAnalyser.cpp  SpectrumAnalyser.h  SpectrumAnalyserTask.cpp  SpectrumAnalyserTask.h  TextSlider.cpp  TextSlider.h  VerticalSlider.cpp  VerticalSlider.h
src/gui/SignalGenerator/: OscillatorController.cpp  OscillatorController.h  OscillatorPlot.cpp  OscillatorPlot.h  SignalGenChyron.cpp  SignalGenChyron.h  SignalGeneratorEditor.cpp  SignalGeneratorEditor.h
src/gui/Toolbar/: PresetsComponent.cpp  PresetsComponent.h  PresetsFileInterface.cpp  PresetsFileInterface.h  SettingsButton.cpp  SettingsButton.h  Toolbar.cpp  Toolbar.h
src/gui/Waveshaper/: BottomBar.cpp  BottomBar.h  FoldFuzzControls.cpp  FoldFuzzControls.h  SplineViewHelpers.h  WaveshaperChyron.cpp  WaveshaperChyron.h  WaveshaperColours.h  WaveshaperDrawer.cpp  WaveshaperDrawer.h  WaveshaperEditor.cpp  WaveshaperEditor.h  WaveshaperMathView.cpp  WaveshaperMathView.h  WaveshaperPlot.cpp  WaveshaperPlot.h  WaveshaperPointsView.cpp  WaveshaperPointsView.h
src/state/: NameHelpers.h  ParameterVersionHints.h  PluginRemoteControls.cpp  PluginRemoteControls.h  PluginState.cpp  PluginState.h  PresetDiscovery.cpp  PresetDiscovery.h  PresetManager.cpp  PresetManager.h
src/state/presets/: PresetDiscovery.cpp  PresetDiscovery.h  PresetManager.cpp  PresetManager.h
